fix css overlap with headers

--- a/react-and-morty/src/components/LocationHeader.css
+++ b/react-and-morty/src/components/LocationHeader.css
@@ -13,7 +13,7 @@
 }
 
 .headRed {
-  animation-name: floating;
+  animation-name: floatingHeads;
   animation-duration: 3s;
   animation-iteration-count: infinite;
   animation-timing-function: ease-in-out;
@@ -30,7 +30,7 @@
   transition: all 1s ease-in;
 }
 .headBlue {
-  animation-name: floating;
+  animation-name: floatingHeads;
   animation-duration: 3s;
   animation-iteration-count: infinite;
   animation-timing-function: ease-in-out;
@@ -47,7 +47,7 @@
   transition: all 1s ease-in;
 }
 .headYellow {
-  animation-name: floating;
+  animation-name: floatingHeads;
   animation-duration: 3s;
   animation-iteration-count: infinite;
   animation-timing-function: ease-in-out;
@@ -59,12 +59,11 @@
   height: 200px;
   width: auto;
   left: 20%;
-
   z-index: 2;
   transition: all 1s ease-in;
 }
 .headGreen {
-  animation-name: floating;
+  animation-name: floatingHeads;
   animation-duration: 3s;
   animation-iteration-count: infinite;
   animation-timing-function: ease-in-out;
@@ -81,7 +80,7 @@
   transition: all 1s ease-in;
 }
 .headFront {
-  animation-name: floating;
+  animation-name: floatingHeads;
   animation-duration: 3s;
   animation-iteration-count: infinite;
   animation-timing-function: ease-in-out;
@@ -95,7 +94,7 @@
   z-index: 2;
   transition: all 1s ease-in;
 }
-@keyframes floating {
+@keyframes floatingHeads {
   0% {
     transform: translate(0, 0px);
   }
